refactor: use template literals in 404.html redirect script

--- a/public/404.html
+++ b/public/404.html
@@ -11,7 +11,7 @@
 				l.protocol +
 					"//" +
 					l.hostname +
-					(l.port ? ":" + l.port : "") +
+					(l.port ? `:${l.port}` : "") +
 					l.pathname
 						.split("/")
 						.slice(0, 1 + pathSegmentsToKeep)
@@ -24,7 +24,7 @@
 						.join("/")
 						.replace(/&/g, "~and~") +
 					(l.search
-						? "&" + l.search.slice(1).replace(/&/g, "~and~")
+						? `&${l.search.slice(1).replace(/&/g, "~and~")}`
 						: "") +
 					l.hash,
 			);
